# infra_agent

./: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  Dockerfile  infra-agent-0.0.1-1762166129-375cb39.tgz  pyproject.toml  test.json
.github/workflows/: build.yaml  release.yaml
chart/infra-agent/: Chart.yaml  values.yaml
chart/infra-agent/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
infra_agent/: app.py  main.py  settings.py
infra_agent/models/: ai.py  generic.py  gl.py  grafana.py  k8s.py
infra_agent/providers/: __init__.py  gl.py  grafana.py  k8s.py  router.py
infra_agent/workers/: ai.py
tests/: test_config.py  test_utils.py
